Fix scroll on mobile navbar and collapse on menu click (#19)

--- a/app/assets/stylesheets/scss/components/_header.scss
+++ b/app/assets/stylesheets/scss/components/_header.scss
@@ -23,6 +23,10 @@
   }
 }
 
+html.nav-bar-opened {
+  overflow-y: hidden;
+}
+
 .c-navbar__logo {
   background-image: url(mobileday-logo.png);
   float: left;
